<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- Units Selection -->
    <RadioGroup
        android:id="@+id/unitRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing">

        <RadioButton
            android:id="@+id/metricRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/metric_units"
            android:layout_marginEnd="@dimen/spacing"/>

        <RadioButton
            android:id="@+id/englishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_units"/>
    </RadioGroup>

    <!-- Weight Input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight_label"/>

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:hint="@string/weight_hint"/>
    </LinearLayout>

    <!-- Height Input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height_label"/>

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:hint="@string/height_hint"/>
    </LinearLayout>

    <!-- BMI Results -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_label"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/spacing"/>

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing"/>

    <!-- BMI Status -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textSize="@dimen/label_text_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:gravity="center"/>
</LinearLayout>